tests/NormalTests/paczka1/small_fuzzy/39200211.err
Error in line 1: hI46PswJc1 A151 83,4
Error in line 3: fLW0jfKWXz A151 95,0
